Fixed User height on small screen

--- a/src/style/user.css
+++ b/src/style/user.css
@@ -39,12 +39,10 @@
 .user-wrapper {
     width: 80%;
     margin: 70px auto;
-    max-height: 780px;
     height: auto;
     background: white;
     border-radius: 5px;
     animation-duration: 0.5s;
-    
 }
 
 .user-container {
@@ -77,7 +75,7 @@
 
 .login-form {
     width: 60%;
-    height: 78%;
+    height: 100%;
     /* background: firebrick; */
     margin-left: 50px;
     overflow: hidden;
@@ -142,7 +140,7 @@
     flex-direction: column;
     width: 50%;
     height: 100%;
-    margin-right: 25px;
+    margin-right: 35px;
     padding-right: 20px;
 }
 
@@ -156,12 +154,11 @@
 }
 
 .login-input-container p, .register-input-container p {
- 
     font-size: 15px;
     color: rgba(52, 61, 72, 0.8);
     line-height: 26px;
     letter-spacing: -0.025em;
-    font-family: 'Roboto',sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 
 .sign-in-google {
@@ -295,59 +292,104 @@
     width: 50%;
     height: 100%;
 }
-@media only screen and (min-width:840px){
+
+@media only screen and (min-width:840px) {
     .login-input-container h1, .register-input-container h1 {
-        font-size:42px;
+        font-size: 42px;
     }
-    .login-form{
+    .login-form {
         margin-left: 25px;
     }
 }
-@media only screen and (min-width:1200px){
-    .user-wrapper{
-        width: 100%;
+
+@media only screen and (min-width:1200px) {
+    .user-wrapper {
         max-width: 1170px;
     }
- }
- 
-@media only screen and (min-width:1500px){
+}
+
+/* @media only screen and (min-width:1440px){
+    
+    .login-form{
+        padding-top: 50px;
+    }
+} */
+
+@media only screen and (min-width:1500px) {
     .login-input-container h1, .register-input-container h1 {
-        font-size:45px;
+        font-size: 45px;
     }
 }
-@media only screen and (max-width:1250px){
-   .login-form{
-       width: 100%;
-       max-width: 360px;
-       margin-left: 0;
-       padding: 10px;
-   }
+
+@media only screen and (min-width:1920px) {
+    /* .user-wrapper{
+        height: auto;
+        margin: 20% auto;
+    } */
+    .login-form {
+        padding-top: 0;
+    }
 }
-@media only screen and (max-width:991px){
-    .user-bg{
+
+@media only screen and (max-width:1450px) {
+    .user-bg {
+        height: 615px;
+    }
+}
+
+@media only screen and (max-width:1330px) {
+    .user-bg {
+        height: 658px;
+    }
+}
+
+@media only screen and (max-width:1250px) {
+    .login-form {
+        width: 100%;
+        max-width: 360px;
+        margin-left: 0;
+        padding: 10px;
+    }
+}
+
+@media only screen and (max-width:1024px) {
+    /* .user-wrapper{
+        height:90vh;
+        margin: 30px auto;
+    } */
+    .login-form {
+        height: 100%;
+        /* padding-top: 30px; */
+    }
+}
+
+@media only screen and (max-width:991px) {
+    .user-bg {
         display: none;
     }
-    .user-form{
+    .user-form {
         width: 100%;
         padding: 38px;
     }
-    .login-form{
+    .login-form {
         width: 100%;
         max-width: 100%;
         height: 100%;
-        padding-top: 50px;
+        /* padding-top: 50px; */
     }
- }
- @media only screen and (max-width:600px){
-    
-    .user-form{
+}
+
+@media only screen and (max-width:600px) {
+    .user-form {
         padding: 20px;
     }
- }
- @media only screen and (max-width:480px){
-    
-    .user-form{
+}
+
+@media only screen and (max-width:480px) {
+    .user-form {
         padding: 10px;
     }
- }
- 
+    .user-wrapper {
+        width: 75%;
+    }
+}
